--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,15 @@
   width: 100%;
   height: 100vh;
   background: $gradient;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .Search {
+      bottom: 3rem;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+  }
 }
