--- a/src/pages/search/Search.scss
+++ b/src/pages/search/Search.scss
@@ -13,7 +13,7 @@
     h1 {
         font-weight: 700;
         font-family: "Poppins", sans-serif;
-        color: rgb(19, 23, 27);
+        color: $slate;
         font-size: 3rem;
 
         span {
@@ -27,13 +27,24 @@
         margin-inline: auto;
         color: rgb(19, 23, 27);
         font-weight: 600;
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .error {
+        margin-block: 1rem;
+        width: 100%;
+        padding: .8rem;
+        border-radius: .8rem;
+        background-color: $slate;
+        color: white;
+        font-weight: 500;
+
     }
 
     .input {
         width: 100%;
-        padding: .3rem;
-        border-radius: .8rem;
+        padding: 0.3rem;
+        border-radius: 0.8rem;
         background-color: white;
         display: flex;
         gap: 1rem;
@@ -42,11 +53,11 @@
         button {
             border: none;
             background-color: $rose-pink;
-            padding: .5rem 1rem;
-            border-radius: .5rem;
+            padding: 0.5rem 1rem;
+            border-radius: 0.5rem;
             color: white;
             font-size: 1.7rem;
-            
+
             &:hover {
                 cursor: pointer;
                 background-color: darken($rose-pink, 5);
@@ -56,10 +67,33 @@
         input {
             width: 100%;
             height: 100%;
-            padding: .5rem 1rem;
+            padding: 0.5rem 1rem;
             font-size: 1.6rem;
             outline: none;
             border: none;
+        }
+    }
+
+    .list {
+        text-align: left;
+        padding: 0.5rem;
+        border-radius: 0.8rem;
+        background-color: white;
+        display: flex;
+        font-size: 1.6rem;
+        position: relative;
+        width: 100% !important;
+        color: lighten($slate, 10);
+
+        & > * {
+            padding: .5rem .8rem;
+            font-size: 1.4rem;
+            border-radius: .4rem;
+            &:hover {
+                cursor: pointer;
+                background-color: $slate;
+                color: white;
+            }
         }
     }
 }
