--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,4 @@ $gradient: linear-gradient(to bottom right, rgb(50, 150, 190), rgb(255, 119, 142
 $blue: rgb(50, 150, 190);
 $rose-pink: rgb(255, 119, 142);
 $lime: rgb(172, 255, 117);
+$slate: rgb(19, 23, 27); 
