--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,35 @@
-@import './styles/variables';
+@import "./styles/variables";
+@import "./styles/breakpoints";
 
 .App {
-  width: 100%;
-  height: 100vh;
-  background: $gradient;
-  display: flex;
+    width: 100%;
+    min-height: 100vh;
+    padding-block: 4rem;
+    background: $gradient;
+
+    @include sm {
+        padding: 0;
+        min-height: initial;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+
+    &::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
+    }
+
+    display: flex;
     justify-content: center;
     align-items: center;
 
     .Search {
-      bottom: 3rem;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-  }
+        bottom: 3rem;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
