--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=ABeeZee&family=Arsenal:wght@400;700&family=Marcellus&family=Mooli&family=Poppins:wght@100;300;400;500;600;700;800;900&family=Work+Sans:wght@300;500;600;700&display=swap");
+@import './styles/breakpoints';
 
 * {
     margin: 0;
@@ -27,5 +28,14 @@ body {
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%
+}
+
+body {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+
+    &::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
+    }
 }
